...
const val TITLE_NAME_TEST_TAG: String = "title-name"

const val TITLE_VERSION_TEST_TAG: String = "title-version"

const val TITLE_SWITCH_TEST_TAG: String = "title-switch"

const val TITLE_OPTIONS_TEST_TAG: String = "title-options"

const val TITLE_QUIT_TEST_TAG: String = "title-quit"

const val TITLE_SERVER_TEST_TAG: String = "title-server"

fun titleChoiceTestTag(key: String): String = "title-choice-$key"
...
